# ZEE200

./: .gitignore  CMakeLists.txt  README.md  set_net.sh  setup.sh
benchmarks/empty/: empty.s  empty.zk
benchmarks/fib_stdin/: fib_stdin.c  fib_stdin.s  fib_stdin.zk
benchmarks/gzip/: gzip.s  gzip.zk  gzip_decompress_input  gzip_input
benchmarks/mergesort/: mergesort.c  mergesort.s  mergesort.zk  mergesort_input_500.txt  mergesort_input_5000.txt
benchmarks/sed/: sed.s  sed.zk  sed_input
benchmarks/sha256/: sha256.c  sha256.s  sha256.zk
emp-zk/emp-zk-arith/: int_fp.h
scripts/: build_debug.sh  build_release.sh  run_empty_ram_sweep_zee.sh  run_empty_ram_sweep_zee200.sh  run_fib_prover.sh  run_fib_verifier.sh  run_gzip_bug_prover.sh  run_gzip_bug_verifier.sh  run_gzip_decompress_prover.sh  run_gzip_decompress_verifier.sh  run_mergesort5000_prover.sh  run_mergesort5000_verifier.sh  run_mergesort500_prover.sh  run_mergesort500_verifier.sh  run_sed_prover.sh  run_sed_verifier.sh  run_sha_prover.sh  run_sha_verifier.sh
scripts/zee/: run_zee_fib20_prover.sh  run_zee_fib20_verifier.sh  run_zee_fib23_prover.sh  run_zee_fib23_verifier.sh  run_zee_gzip_bug_prover.sh  run_zee_gzip_bug_verifier.sh  run_zee_gzip_decompress_prover.sh  run_zee_gzip_decompress_verifier.sh  run_zee_mergesort5000_prover.sh  run_zee_mergesort5000_verifier.sh  run_zee_mergesort500_prover.sh  run_zee_mergesort500_verifier.sh  run_zee_sed_prover.sh  run_zee_sed_verifier.sh  run_zee_sha10_prover.sh  run_zee_sha10_verifier.sh  run_zee_sha200_prover.sh  run_zee_sha200_verifier.sh
scripts/zkvm/: run_zkvm_fib20_prover.sh  run_zkvm_fib20_verifier.sh  run_zkvm_fib23_prover.sh  run_zkvm_fib23_verifier.sh  run_zkvm_gzip_bug_prover.sh  run_zkvm_gzip_bug_verifier.sh  run_zkvm_gzip_decompress_prover.sh  run_zkvm_gzip_decompress_verifier.sh  run_zkvm_mergesort5000_prover.sh  run_zkvm_mergesort5000_verifier.sh  run_zkvm_mergesort500_prover.sh  run_zkvm_mergesort500_verifier.sh  run_zkvm_sed_prover.sh  run_zkvm_sed_verifier.sh  run_zkvm_sha10_prover.sh  run_zkvm_sha10_verifier.sh  run_zkvm_sha200_prover.sh  run_zkvm_sha200_verifier.sh
toolchain/: Dockerfile.toolchain  README.md  bootstrap_toolchain.sh  compile_c.sh  compile_c_docker.sh  rebuild_zknewlib_docker.sh  rebuild_zknewlib_in_container.sh  s_to_zk_docker.sh
toolchain/zee-cleartext/: CMakeLists.txt  README.md
toolchain/zee-cleartext/src/: InstFormat.txt  Main.cpp  Oracle.cpp  Oracle.h  TimerClock.hpp  as2hex.cpp  as2hex.h  char2hex.cpp  fib.ll  fib.s  fib_file.c  gen_data.cpp  hex2char.cpp  isaconverter.cpp  prog  zkassembler.cpp  zkconst.h
toolchain/zk-llvm-backend/: .gitignore  README.md
toolchain/zk-llvm-backend/libos/: a.c  a.s  (+2 more)
toolchain/zk-llvm-backend/sf_div_pass/: CMakeLists.txt  opt_gen.cpp
toolchain/zknewlib/: Makefile  config.status
zee-processor/: CMakeLists.txt
zee-processor/cmake/: common.cmake
zee-processor/compiler/: Addr.cpp  Addr.h  Compiler.h  Control.h  Example.cpp  Example.h  Main.cpp  Reg.cpp  Reg.h  Sha.cpp  Sha.h
zee-processor/emp-ot/: CMakeLists.txt
zee-processor/emp-ot/src/: base.cc  base.h  ferret.cc  ferret.h  gthash.h  gtprg.h  gtprp.h  iknp.h  link.h  lpn_error.h  net_link.cc  net_link.h  point.cc  point.h  role.h  sparse_linear_code.h
zee-processor/src/: Assembler.cpp  Channel.cpp  Channel.h  Cpu.h  Cpu.hpp  Cycle.h  Hash.h  Main.cpp  Op.h  Oracle.cpp  PRF.cpp  PRF.h  PRG.h  Permute.cpp  Permute.h  Protocol.cpp  Protocol.h  Protocol.hpp  Ram.h  Ram.hpp  Role.h  Rom.h  Rom.hpp  Share.h  Share.hpp  Zp.cpp  Zp.h  hash.cpp
zee-processor/src/OT/: BaseOT.cpp  BaseOT.h  Ferret.cpp  Ferret.h  Hash.cpp  Hash.h  MExtension.cpp  MExtension.h  Main.cpp  Main_old.cpp  Point.cpp  Point.h
zk-ram/: inset_rom.h  ram.h  rom.h  zkset.h
zkvm/: base_types.h  common_test_base.h  generic_asm_test.cpp  instruction.h  instruction_builder.cpp  register_layout.h  rom_offsets.h  types.h  zkcpu.h
zkvm/cleartext_vm/: cleartext_executor.cpp  cleartext_executor.h  machine.h  oracles.cpp  oracles.h
zkvm/context/: gate_context.h
zkvm/gates/: add32_gate.h  all_gates.h  and32_gate.h  and32i_gate.h  asminput_gate.h  base_gate.h  eqz_gate.h  gate_registry.h  load_gate.h  loadb_gate.h  loadh_gate.h  lt_gate.h  mod4_gate.h  msb_gate.h  mul32_gate.h  mul32i_gate.h  or32_gate.h  or32i_gate.h  pow2_gate.h  sra_gate.h  srai_gate.h  srli_gate.h  store_gate.h  storeb_gate.h  storeh_gate.h  sub32_gate.h  udiv_gate.h  uloadb_gate.h  uloadh_gate.h  ult_gate.h  urem_gate.h  vmcall_gate.h  xor32_gate.h  xor32i_gate.h
zkvm/parsing/: asm_parser.cpp  basic_block_parser.cpp  basic_block_parser.h  data_section.h  instruction_classifier.h  label_resolver.cpp  label_resolver.h  pc_update.cpp  pc_update.h  register_mapping.h
zkvm/translation/: gate_translator.cpp  gate_translator.h
(+251 files in other folders)
